--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,8 +2,8 @@ FROM node:18
 LABEL Owner 'Caesarsage'
 WORKDIR /usr/api
 COPY package.json .
-RUN npm install
+RUN npm ci-only=production
 COPY . ./
-ENV PORT 4000
+ENV PORT 5000
 EXPOSE $PORT
 CMD [ "npm", "run", "start" ]
