--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
+.*/.env
+*/*/.env
+*/*.env
+env.production.local
 
 npm-debug.log*
 yarn-debug.log*
