--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jest": "^29.0.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.9"
+    "mongoose": "^6.2.9",
+    "supertest": "^6.2.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
